Fixed the playing animation